--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <a href="https://crishellemaun.github.io/CITE-Schedule/" target="_blank" class="sub-item">CITE SChedule</a>
             <a href="https://crishellemaun.github.io/Weather-Webscraping/" target="_blank" class="sub-item">Weather Webscraping</a>
             <a href="https://crishellemaun.github.io/Dynamic-Website-Webscrape/" target="_blank" class="sub-item">Dynamic Website Webscrape</a>
+            <a hre="https://public.tableau.com/views/Covid_16354731799760/Sheet1?:language=en-US&publish=yes&:display_count=n&:origin=viz_share_link" target="_blank" class="sub-item">Table of Covid Datas</a>
           </div>
         </div>
         <div class="item"><a href="#"><i class="fas fa-cogs"></i>Settings</a></div>
