--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             <a href="https://crishellemaun.github.io/CITE-Schedule/" target="_blank" class="sub-item">CITE SChedule</a>
             <a href="https://crishellemaun.github.io/Weather-Webscraping/" target="_blank" class="sub-item">Weather Webscraping</a>
             <a href="https://crishellemaun.github.io/Dynamic-Website-Webscrape/" target="_blank" class="sub-item">Dynamic Website Webscrape</a>          
-            <a href="https://crishellemaun.github.io/Table-of-Covid-Datas/" target="_blank" class="sub-item">Table of Covid Datas</a>  
+            <a href="https://crishellemaun.github.io/Table-of-Covid-Datas/" target="_blank" class="sub-item">Table of Covid Datas</a>
+            <a href="https://crishellemaun.github.io/GDP-of-Asian-countries-Webscraping/" target="_blank" class="sub-item">GDP Asian Countries</a>
             
           </div>
         </div>
