--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
             
           </div>
         </div>
-        <div class="item"><a href="#"><i class="fas fa-cogs"></i>Settings</a></div>
-        <div class="item">
+        <div class="item"><a href="#"><i class="fas fa-cogs"></i>Certificates</a></div>
+        <div class="sub-menu">
+          <a href="https://crishellemaun.github.io/Huawei-Certificates/" target="_blank" class="sub-item">Huawei Certificates</a>
           <a class="sub-btn"><i class="fas fa-tablet-alt"></i>Contact Me<i class="fas fa-angle-right dropdown"></i></a>
           <div class="sub-menu">
             <a href="https://www.facebook.com/crishellemaun19/" target="_blank" class="sub-item">Facebook</a>
