--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
       <div class="menu">
         <div class="item"><a href="#"><i class="fas fa-desktop"></i>Dashboard</a></div>
-<!--         <div class="item"> -->
+        <div class="item">
           <a class="sub-btn"><i class="fas fa-tasks"></i>It Elective 3 Activities<i class="fas fa-angle-right dropdown"></i></a>
           <div class="sub-menu">
             <a href="https://crishellemaun.github.io/CITE-Schedule/" target="_blank" class="sub-item">CITE SChedule</a>
@@ -29,10 +29,11 @@
             
           </div>
         </div>
-        <div class="item"><a href="#"><i class="fas fa-certificate"></i>Certificates</a></div>
+        <a class="sub-btn"><i class="fas fa-certificate"></i>Certificates<i class="fas fa-angle-right dropdown"></i></a>
         <div class="sub-menu">
           <a href="https://crishellemaun.github.io/Huawei-Certificates/" target="_blank" class="sub-item">Huawei Certificates</a>
           
+        </div>
         </div>
           <a class="sub-btn"><i class="fas fa-tablet-alt"></i>Contact Me<i class="fas fa-angle-right dropdown"></i></a>
           <div class="sub-menu">
