--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             
           </div>
         </div>
-        <a class="sub-btn"> <a href="https://crishellemaun.github.io/Huawei-Certificates/" target="_blank" class="sub-item">Huawei Certificates><i class="fas fa-certificate"></i>Certificates<i class="fas fa-angle-right dropdown"></i></a>
+        <a class="sub-btn"><i class="fas fa-certificate"></i>Certificates<i class="fas fa-angle-right dropdown"></i></a>
         <div class="sub-menu">
-<!--           <a href="https://crishellemaun.github.io/Huawei-Certificates/" target="_blank" class="sub-item">Huawei Certificates</a> -->
+           <a href="https://crishellemaun.github.io/Huawei-Certificates/" target="_blank" class="sub-item">Huawei Certificates</a> 
           
         </div>       
           <a class="sub-btn"><i class="fas fa-tablet-alt"></i>Contact Me<i class="fas fa-angle-right dropdown"></i></a>
