--- a/index.html
+++ b/index.html
@@ -29,11 +29,8 @@
             
           </div>
         </div>
-        <a class="sub-btn"><i class="fas fa-certificate"></i>Certificates<i class="fas fa-angle-right dropdown"></i></a>
-        <div class="sub-menu">
-           <a href="https://crishellemaun.github.io/Huawei-Certificates/" target="_blank" class="sub-item">Huawei Certificates</a> 
-          
-        </div>       
+        <div class="item"><a href="#"><i class="fas fa-cogs"></i>Settings</a></div>
+        <div class="item">      
           <a class="sub-btn"><i class="fas fa-tablet-alt"></i>Contact Me<i class="fas fa-angle-right dropdown"></i></a>
           <div class="sub-menu">
             <a href="https://www.facebook.com/crishellemaun19/" target="_blank" class="sub-item">Facebook</a>
