--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <i class="fas fa-times"></i>
       </div>
       <div class="menu">
-        <div class="item"><a href="#"><i class="fas fa-desktop"></i>Dashboard</a></div>
+<!--         <div class="item"><a href="#"><i class="fas fa-desktop"></i>Dashboard</a></div> -->
         <div class="item">
           <a class="sub-btn"><i class="fas fa-tasks"></i>It Elective 3 Activities<i class="fas fa-angle-right dropdown"></i></a>
           <div class="sub-menu">
