--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <div class="item">
           <a class="sub-btn"><i class="fas fa-tablet-alt"></i>Contact Me<i class="fas fa-angle-right dropdown"></i></a>
           <div class="sub-menu">
-            <a href="https://www.facebook.com/crishellemaun19/" target="_blank" class="sub-item">Facebook</a>
-            <a href="https://www.youtube.com/channel/UC8fHKC2qBb-FAROzYqo42tw/featured" target="_blank" class="sub-item">Youtube</a>
+            <a href="https://www.facebook.com/crishellemaun19/" target="_blank" class="sub-item"><i class="fab fa-facebook-f"></i>Facebook</a>
+            <a href="https://www.youtube.com/channel/UC8fHKC2qBb-FAROzYqo42tw/featured" target="_blank" class="sub-item"><i class="fab fa-youtube"></i>Youtube</a>
           </div>
         </div>
         
