--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <div class="sub-menu">
             <a href="https://www.facebook.com/crishellemaun19/" target="_blank" class="sub-item"><i class="fab fa-facebook-f"></i>Facebook</a>
             <a href="https://www.youtube.com/channel/UC8fHKC2qBb-FAROzYqo42tw/featured" target="_blank" class="sub-item"><i class="fab fa-youtube"></i>Youtube</a>
-            <a href="#" class="sub-item"><i class="far fa-envelope"></i>crishellejanine.maun@jmc.edu.ph</a>
+            <a href="#" style="font-size:20px;<i class="far fa-envelope"></i>crishellejanine.maun@jmc.edu.ph</a>
           </div>
         </div>
         
