--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       </div>
       <div class="menu">
 <!--         <div class="item"><a href="#"><i class="fas fa-desktop"></i>Dashboard</a></div> -->
+        <div class="name"><a href="#"></i>Crishelle Janine P. Maun</a></div>
         <div class="item">
           <a class="sub-btn"><i class="fas fa-tasks"></i>It Elective 3 Activities<i class="fas fa-angle-right dropdown"></i></a>
           <div class="sub-menu">
