--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         <div class="item">
           <a class="sub-btn"><i class="fas fa-tasks"></i>It Elective 3 Activities<i class="fas fa-angle-right dropdown"></i></a>
           <div class="sub-menu">
-            <a href="https://crishellemaun.github.io/CITE-Schedule/" target="_blank" class="sub-item">CITE SChedule</a>
-            <a href="https://crishellemaun.github.io/Weather-Webscraping/" target="_blank" class="sub-item">Weather Webscraping</a>
-            <a href="https://crishellemaun.github.io/Dynamic-Website-Webscrape/" target="_blank" class="sub-item">Dynamic Website Webscrape</a>          
-            <a href="https://crishellemaun.github.io/Table-of-Covid-Datas/" target="_blank" class="sub-item">Table of Covid Datas</a>
-            <a href="https://crishellemaun.github.io/GDP-of-Asian-countries-Webscraping/" target="_blank" class="sub-item">GDP Asian Countries</a>
+            <a href="https://crishellemaun.github.io/CITE-Schedule/" target="_blank" class="sub-item"><i class="fa fa-tasks" aria-hidden="true"></i>CITE SChedule</a>
+            <a href="https://crishellemaun.github.io/Weather-Webscraping/" target="_blank" class="sub-item"><i class="fa fa-tasks" aria-hidden="true"></i>Weather Webscraping</a>
+            <a href="https://crishellemaun.github.io/Dynamic-Website-Webscrape/" target="_blank" class="sub-item"><i class="fa fa-tasks" aria-hidden="true"></i>Dynamic Website Webscrape</a>          
+            <a href="https://crishellemaun.github.io/Table-of-Covid-Datas/" target="_blank" class="sub-item"><i class="fa fa-tasks" aria-hidden="true"></i>Table of Covid Datas</a>
+            <a href="https://crishellemaun.github.io/GDP-of-Asian-countries-Webscraping/" target="_blank" class="sub-item"><i class="fa fa-tasks" aria-hidden="true"></i>GDP Asian Countries</a>
             
           </div>
         </div>
@@ -35,7 +35,7 @@
         <div class="item">
           <a class="sub-btn"><i class="fas fa-certificate"></i>Certificates<i class="fas fa-angle-right dropdown"></i></a>
           <div class="sub-menu">
-            <a href="https://crishellemaun.github.io/Huawei-Certificates/" target="_blank" class="sub-item">Huawei Certificates</a>
+            <a href="https://crishellemaun.github.io/Huawei-Certificates/" target="_blank" class="sub-item"><i class="fas fa-certificate"></i>Huawei Certificates</a>
 
           </div>
         </div>
