--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <a href="https://crishellemaun.github.io/Dynamic-Website-Webscrape/" target="_blank" class="sub-item"><i class="fa fa-tasks" aria-hidden="true"></i>Dynamic Website Webscrape</a>          
             <a href="https://crishellemaun.github.io/Table-of-Covid-Datas/" target="_blank" class="sub-item"><i class="fa fa-tasks" aria-hidden="true"></i>Table of Covid Datas</a>
             <a href="https://crishellemaun.github.io/GDP-of-Asian-countries-Webscraping/" target="_blank" class="sub-item"><i class="fa fa-tasks" aria-hidden="true"></i>GDP Asian Countries</a>
+            <a href="" target="_blank" class="sub-item"><i class="fa fa-tasks" aria-hidden="true"></i>Word Cloud Project</a>
             
           </div>
         </div>
